# vehicle-tracking

./: .gitignore  README.md
admin-frontend/: .env  README.md  package-lock.json  package.json  tsconfig.json
admin-frontend/public/: index.html
admin-frontend/src/: App.css  App.tsx  Body.tsx
admin-frontend/src/components/: RealTimeMap.tsx  TripList.tsx
admin-frontend/src/constants/: icon.ts
admin-frontend/src/pages/: index.tsx
admin-frontend/src/queries/: api.ts
admin-frontend/src/types/: tripData.tsx
backend/: .env  .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: database.ts
backend/src/controllers/: MapController.ts
backend/src/models/: trip.ts
backend/src/routes/: tripRoutes.ts
realtime-car-data/: .gitignore  README.md  heartbeat.csv  main.py  pyproject.toml
