[tool.poetry]
name = "realtime-car-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
websockets = "^15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
